# wasm-c-api

./: CMakeLists.txt  Dockerfile  Jenkinsfile  Makefile  README.md
.github/workflows/: main.yml
example/: CMakeLists.txt  callback.c  callback.cc  callback.wasm  callback.wat  example_helpers.h  example_helpers.hh  finalize.c  finalize.cc  func_arity.c  func_arity.cc  func_arity.wasm  func_arity.wat  global.c  global.cc  global.wasm  global.wat  hello.c  hello.cc  hello.wat  hostref.c  hostref.cc  memory.c  memory.cc  memory.wasm  memory.wat  mmap.c  mmap.cc  mmap.wasm  mmap.wat  multi.c  multi.cc  reflect.c  reflect.cc  serialize.c  serialize.cc  start.c  start.cc  table.c  table.cc  (+8 more)
include/: wasm-emboldened.h  wasm-unchecked.h  wasm-v8.hh  wasm.h  wasm.hh
patch/: 0001-BUILD.gn-add-wasm-v8-lowlevel.patch  0002-wasm-objects-add-host-owned-memory.patch
src/: CMakeLists.txt  wasm-bin.cc  wasm-bin.hh  wasm-c.cc  wasm-v8-lowlevel.cc  wasm-v8-lowlevel.hh  wasm-v8.cc
v8-samples/: CMakeLists.txt
